# Calculator

./: CMakeLists.txt  README.md
include/: mathEngine.h  menu.h
src/: main.cpp  menu.cpp
